flatvm/err.txt
In file included from include/values.h:7,
                 from src/disasm.c:5:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/values.h:7,
                 from include/object.h:7,
                 from include/falloc.h:7,
                 from src/falloc.c:5:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/values.h:7,
                 from include/object.h:7,
                 from include/falloc.h:7,
                 from src/garcol.c:6:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/idents.h:7,
                 from include/loader.h:6,
                 from src/loader.c:5:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
src/loader.c: In function ‘load_pag’:
src/loader.c:98:9: warning: implicit declaration of function ‘norvec_push’ [-Wimplicit-function-declaration]
   98 |         norvec_push(pag, n);
      |         ^~~~~~~~~~~
In file included from include/idents.h:7,
                 from include/loader.h:6,
                 from src/main.c:8:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/norris.h:7,
                 from src/norris.c:5:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/values.h:7,
                 from include/object.h:7,
                 from src/object.c:6:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/values.h:7,
                 from src/values.c:4:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
In file included from include/idents.h:7,
                 from include/loader.h:6,
                 from include/virmac.h:7,
                 from src/virmac.c:5:
include/dynarr.h:86:38: error: unknown type name ‘ElemType’
   86 | void prefix ## _push (struct Name *, ElemType);   \
      |                                      ^~~~~~~~
include/norris.h:115:1: note: in expansion of macro ‘DYNARR_API_H’
  115 | DYNARR_API_H(NorVec, struct Norris, norvec);
      | ^~~~~~~~~~~~
